# Research-CodeBench

./: .gitignore  BLOG.md  DESIGN_DOC.md  PAPER_DRAFT.md  README.md  pyproject.toml
data/: h4_results.json  h4_results_v1.json  swebench_results_claude-code_smoke-v1.json
docs/: swebench_experiment.md  swebench_pilot_results.md
docs/blog/: beyond-pass-k-reliability-security.md
experiments/: exp0_baseline.py
results/: README.md
scripts/: convert_swebench_report.py  create_swebench_predictions_template.py  plot_results.py  prepare_swebench_sample.py  run_demo.py  run_experiments.py  run_security_exp.py  run_swebench_agent.py
src/codebench/: __init__.py  core.py  data.py  evaluate.py  swebench_adapter.py  swebench_results.py  swebench_runner.py
tests/: test_core.py  test_data.py  test_evaluate.py  test_exp0_baseline.py  test_suite_and_scoring.py  test_swebench_adapter.py  test_swebench_results.py  test_swebench_runner.py
