[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codebench"
version = "0.1.0"
description = "Agent code-generation benchmark harness"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.19",
    "numpy>=1.24",
    "pandas>=2.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "tqdm>=4.65",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
